--- a/development/terminalfour/src/sass/msu-partials/_global-header.scss
+++ b/development/terminalfour/src/sass/msu-partials/_global-header.scss
@@ -764,6 +764,9 @@ body{
   div[alt^="Asphalt"] {
     box-shadow: 1px 5px 5px rgba(0, 0, 0, 0.175);
   }
+  i.fa.fa-angle-down.fa-lg {
+    float: right;
+  }
 }
 
 @media (min-width: $screen-md-min) {
