--- a/www-root/includes/header.html
+++ b/www-root/includes/header.html
@@ -37,7 +37,7 @@
                  </ul>
               </li>
                <li class="dropdown collapse navbar-collapse">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">About <i role="presentation" class="fa fa-angle-down fa-lg pull-right"></i></a>
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">About <i role="presentation" class="fa fa-angle-down fa-lg"></i></a>
                   <ul class="dropdown-menu">
                     <li><a href="/about">About MSU Denver</a></li>
                     <li><a href="/about/strategicplan2020">Strategic Plan 2020</a></li>
@@ -51,7 +51,7 @@
                   </ul>
                </li>
                <li class="dropdown collapse navbar-collapse">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Prospective Students <i role="presentation" class="fa fa-angle-down fa-lg pull-right"></i></a>
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Prospective Students <i role="presentation" class="fa fa-angle-down fa-lg"></i></a>
                   <ul class="dropdown-menu">
                     <li><a href="/admissions">Admissions</a></li>
                     <li><a href="/admissions/student-types/first-timeundergraduate/">First-Time Undergraduate</a></li>
@@ -67,7 +67,7 @@
                   </ul>
                </li>
                <li class="dropdown collapse navbar-collapse">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Academics <i role="presentation" class="fa fa-angle-down fa-lg pull-right"></i></a>
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Academics <i role="presentation" class="fa fa-angle-down fa-lg"></i></a>
                   <ul class="dropdown-menu">
                     <li><a href="/academics/">Academics Overview</a></li>
                     <li><a href="/programs/">Academic Programs</a></li>
@@ -85,7 +85,7 @@
                   </ul>
                </li>
                <li class="dropdown collapse navbar-collapse">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Alumni and Friends <i role="presentation" class="fa fa-angle-down fa-lg pull-right"></i></a>
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Alumni and Friends <i role="presentation" class="fa fa-angle-down fa-lg"></i></a>
                   <ul class="dropdown-menu">
                     <li><a href="/alumni/">Alumni &amp; Friends Home</a></li>
                     <li><a href="/alumni/alumnibenefits/">Alumni Benefits</a></li>
