--- a/development/terminalfour/src/sass/msu-partials/_global-header.scss
+++ b/development/terminalfour/src/sass/msu-partials/_global-header.scss
@@ -88,7 +88,7 @@
 //  transition: max-height 500ms cubic-bezier(0.420, 0.000, 0.580, 1.000);
 //  box-shadow: 1px 5px 5px rgba(0, 0, 0, 0.175);
 //}
-#menu-nav {
+#bs-example-navbar-collapse-1 {
  overflow-y: scroll;
 }
 
@@ -305,7 +305,7 @@ ul.nav.navbar-nav li .visit-give-mobile {
   // display: none;
 }
 
-ul.nav.navbar-nav li .apply-mobile {
+.apply-mobile {
   background: #d11242;
   color: white;
   font-size: 1.0em;
@@ -603,7 +603,7 @@ div.modal-body form button.btn.btn-default {
   float: right;
   padding: 5px 12px;
 }
-.form-control {
+.modal-body>form>.form-group>.form-control {
   border: 0px;
   border-radius: 0;
 }
@@ -661,6 +661,45 @@ span.fa.fa-search.search-desktop {
   font-size: 1.5em;
 }
 
+//action button fixes
+.visit-give-mobile {
+  background: #555555;
+  color: #fff;
+  font-size: 1.0em;
+  border-radius: 5px 5px 5px 5px;
+  margin: 0.75em 0.25em 0em 0em;
+  text-align: center;
+  width: 99%;
+  font-family: 'Gotham A', 'Gotham B', sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  letter-spacing: 2px;
+  float: right !important;
+  -webkit-transition: background .25s ease;
+  -moz-transition: background .25s ease;
+  -o-transition: background .25s ease;
+  transition: background .25s ease;
+}
+
+a.btn.btn-default.visit-give-mobile, a.btn.btn-default.apply-mobile {
+  text-align: center;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  line-height: 22px;
+  display: block;
+  padding: 10px 15px;
+  font-family: "Gotham A", "Gotham B", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  color: #fff;
+  -webkit-transition: all 0.25s ease-in-out;
+  -moz-transition: all 0.25s ease-in-out;
+  -o-transition: all 0.25s ease-in-out;
+  transition: all 0.25s ease-in-out;
+  list-style: none;
+  margin-bottom: 0;
+  padding-left: 0;
+}
+//end action button fixes
+
 @media (max-width: $screen-sm-max) {
   #nav-admissions {
     padding-left: 0px;
@@ -683,6 +722,17 @@ span.fa.fa-search.search-desktop {
     display: block !important;
   }
 }
+
+//action button fixes
+@media (min-width: 768px) {
+  a.btn.btn-default.visit-give-mobile, a.btn.btn-default.apply-mobile {
+    padding-top: 14px;
+    padding-bottom: 14px;
+    padding-top: 14px;
+    padding-bottom: 14px;
+  }
+}
+//end action button fixes
 
 @media screen and (max-width: 991px) {
 body{
@@ -767,6 +817,18 @@ body{
   i.fa.fa-angle-down.fa-lg {
     float: right;
   }
+
+//action button fixes
+  a.btn.btn-default.visit-give-mobile, a.btn.btn-default.apply-mobile {
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 1.8em;
+    padding-right: 1.8em;
+    display: block;
+  }
+//end action button fixes
+
+
 }
 
 @media (min-width: $screen-md-min) {
@@ -857,7 +919,7 @@ body{
   }
 
   ul.nav.navbar-nav li a {
-  	padding: 10px;
+  	padding: 10px 18px;
   }
 
 //  li.dropdown {
@@ -966,7 +1028,7 @@ body{
     text-transform: uppercase;
 
     width: 9% !important;
-    top: -6.7em;
+    top: -110px;
     border-radius: 0 0 10px 10px !important;
     padding: 0.3em 1.2em !important;
   }
@@ -1065,9 +1127,22 @@ body{
   li.dropdown.collapse.navbar-collapse {
     position: relative;
   }
-  #menu-nav {
+  #bs-example-navbar-collapse-1 {
    overflow: visible;
   }
+
+
+//action button fixes
+  a.btn.btn-default.visit-give-mobile, a.btn.btn-default.apply-mobile {
+    text-decoration: none;
+    font-weight: 600;
+    font-size: 18px;
+    padding: 10px;
+    padding-top: 0px;
+    padding-bottom: 0px;
+  }
+//end action button fixes
+
 }
 @media (min-width: $screen-lg-min) {
   .header-container, .container-fluid {
@@ -1119,21 +1194,21 @@ body{
   a.btn.btn-default.visit-give-mobile {
       right: 27.77%;
       width: 9% !important;
-      top: -6.7em;
+      top: -110px;
       border-radius: 0 0 10px 10px !important;
       padding: 0.3em 1.2em !important;
   }
   a.btn.btn-default.give-mobile {
       right: 18.6%;
       width: 9% !important;
-      top: -6.7em;
+      top: -110px;
       border-radius: 0 0 10px 10px !important;
       padding: 0.3em 1.2em !important;
   }
   a.btn.btn-default.apply-mobile {
       right: 9.4%;
       width: 9% !important;
-      top: -6.7em;
+      top: -110px;
       border-radius: 0 0 10px 10px !important;
       padding: 0.3em 1.2em !important;
   }
