add styles for /president to inner-style.css; modify global-header search modal

--- a/development/terminalfour/src/sass/inner-style.scss
+++ b/development/terminalfour/src/sass/inner-style.scss
@@ -37,6 +37,8 @@ header {
 @import "msu-partials/homepage-events";
 @import "msu-partials/footer";
 
+@import "msu-partials/president-site";
+
 /**  ContentType Styles **/
 @import "ContentTypes/variables";
 @import "ContentTypes/programs";
