move remaining t4 code to builder & github

--- a/development/terminalfour/src/sass/ContentTypes/_AdmissionsStyles.scss
+++ b/development/terminalfour/src/sass/ContentTypes/_AdmissionsStyles.scss
@@ -86,9 +86,9 @@
   color: #fff;
 }
 
-#content .row {
-  margin: 0;
-}
+// #content .row {
+//   margin: 0;
+// }
 
 .admissions-img {
   margin-bottom: 1em;
