--- a/development/terminalfour/src/sass/ContentTypes/_content.scss
+++ b/development/terminalfour/src/sass/ContentTypes/_content.scss
@@ -59,16 +59,56 @@ img.border {
 
 }
 
-.content-inner a {
+.content-inner {
+
+  h2 {
+  font-weight: 700;
+  color: #00447c;
+  font-size: 1.75rem;
+  width: 100%;
+  // margin: 0px;
+  margin-bottom:5px;
+  line-height: 1.3;
+  }
+  h3 {
+    color: #717073;
+    font-size: 1.3rem;
+    font-weight: 500;
+    margin-bottom: 4px;
+    margin-top: 2px
+  }
+  h4 {
+    color: #000000;
+    font-size: 1.2rem;
+    font-weight: 700;
+    line-height: 1.3;
+  }
+  h5 {
+    color: #535354;
+    font-size: 1.125em;
+    font-weight: 700;
+  }
+  h6 {
+    background-color: #005fae;
+    color: #fff;
+    text-align: left;
+    font-size: 16px;
+    font-weight: 500;
+    padding: 5px;
+  }
+
+a {
   color: #007dc3;
   font-weight: 700;
 }
-.content-inner a:hover {
+ a:hover {
   border-bottom: 1px solid;
   text-decoration: none;
 }
 
-.content-inner ul li {
+ul li {
   position: relative;
   left: 1em;
+}
+
 }
