--- a/development/terminalfour/src/sass/ContentTypes/_stylestoimport.scss
+++ b/development/terminalfour/src/sass/ContentTypes/_stylestoimport.scss
@@ -119,41 +119,7 @@ h1 {
   font-weight: 800;
   // text-transform: uppercase;
 }
-h2 {
-font-weight: 700;
-color: #00447c;
-font-size: 1.75rem;
-width: 100%;
-margin: 0px;
-margin-bottom:5px;
-line-height: 1.3;
-}
-h3 {
-  color: #717073;
-  font-size: 1.3rem;
-  font-weight: 500;
-  margin-bottom: 4px;
-  margin-top: 2px
-}
-h4 {
-  color: #000000;
-  font-size: 1.2rem;
-  font-weight: 700;
-  line-height: 1.3;
-}
-h5 {
-  color: #535354;
-  font-size: 1.125em;
-  font-weight: 700;
-}
-h6 {
-  background-color: #005fae;
-  color: #fff;
-  text-align: left;
-  font-size: 16px;
-  font-weight: 500;
-  padding: 5px;
-}
+
 // .msudenver_logo img {
 //   padding-bottom: 15px;
 //   padding-top: 25px;
@@ -195,9 +161,9 @@ h6 {
 .nav-header {
   color: #fff
 }
-.form-control {
-  width: 80%
-}
+// .form-control {
+//   width: 80%
+// }
 // .navbar-inverse .navbar-nav>.open {
 //   background-color: #2c3e50
 // }
