add hero caption styles (only) from Admissions.scss to stylestoimport

--- a/development/terminalfour/src/sass/ContentTypes/_stylestoimport.scss
+++ b/development/terminalfour/src/sass/ContentTypes/_stylestoimport.scss
@@ -248,3 +248,56 @@ a.t4Edit-page:hover {
 //   color: #007dc3;
 //   font-weight: 700;
 // }
+
+
+
+.hero-caption {
+  color: #fff;
+  right: 0;
+  bottom: 0;
+  position: static !important;
+  background: #000;
+  margin: 0;
+  font-size: 16.1px;
+  font-weight: 100;
+  background: rgba(0, 0, 0, 0.5);
+  width: 100%;
+  bottom: auto !important;
+  padding: 0%;
+}
+.hero-caption h1, .hero-caption h2, .hero-caption h3, .hero-caption h4, .hero-caption h5, .hero-caption h6 {
+  color: #fff;
+  font-weight: 700;
+  font-size: 1.75rem;
+}
+.hero p {
+  padding: 0 2%;
+}
+.hero span > :first-child {
+  padding-top: 2% !important;
+}
+.hero span > :last-child {
+  padding-bottom: 2% !important;
+}
+
+@media screen and (min-width: 992px) {
+  .hero-caption {
+    width: 40%;
+    float: right;
+    position: absolute !important;
+    top: inherit;
+    right: 0;
+    left: auto;
+    bottom: 0 !important;
+    padding: 2%;
+  }
+  .hero p {
+    padding: inherit;
+  }
+  .hero span > :first-child {
+    padding-top: inherit;
+  }
+  .hero span > :last-child {
+    padding-bottom: inherit;
+  }
+}
