--- a/development/terminalfour/src/sass/ContentTypes/_stylestoimport.scss
+++ b/development/terminalfour/src/sass/ContentTypes/_stylestoimport.scss
@@ -280,6 +280,30 @@ a.t4Edit-page:hover {
   padding-bottom: 2% !important;
 }
 
+h2 {
+    font-weight: 700;
+    color: #00447c;
+    font-size: 1.75rem;
+    width: 100%;
+    margin: 0px;
+    margin-bottom: 5px;
+    line-height: 1.3;
+}
+
+h3 {
+  color: #717073;
+  font-size: 1.3rem;
+  font-weight: 500;
+  margin-bottom: 4px;
+  margin-top: 2px;
+}
+h4 {
+    color: #000000;  
+    font-size: 1.2rem;
+    font-weight: 700;
+    line-height: 1.3;
+}
+
 @media screen and (min-width: 992px) {
   .hero-caption {
     width: 40%;
