fix modal position from top

--- a/development/terminalfour/src/sass/msu-partials/_global-header.scss
+++ b/development/terminalfour/src/sass/msu-partials/_global-header.scss
@@ -699,8 +699,8 @@ a.btn.btn-default.visit-give-mobile, a.btn.btn-default.apply-mobile {
   padding-left: 0;
 }
 
-div#searchModal.modal.fade.in { 
-  top: 10em
+div#searchModal.modal.fade.in {
+  top: 0;
 }
 
 //end action button fixes
