Fixes merging issues with Joel's fixes for president and admissions

--- a/development/terminalfour/src/sass/ContentTypes/_content.scss
+++ b/development/terminalfour/src/sass/ContentTypes/_content.scss
@@ -51,7 +51,6 @@ img.border {
 
 }
 
-<<<<<<< HEAD
 .content-inner {
   a {
    color: #007dc3;
@@ -66,7 +65,7 @@ img.border {
 
 .content-inner ul li {
 	position: relative;
-=======
+}
 .content-inner a {
   color: #007dc3;
   font-weight: 700;
@@ -78,6 +77,5 @@ img.border {
 
 .content-inner ul li {
   position: relative;
->>>>>>> fix-Visit-Give-Apply-Joel
   left: 1em;
 }
