adds new directory admissionsHomepage sass styles. adds new scss file homepage-slider component. adds markup to admissions homepageSlider.html. adds inlcude of admissionsHomepageSlider.html to admissions.html. compiles new main-style.css file.

--- a/development/terminalfour/src/sass/main-style.scss
+++ b/development/terminalfour/src/sass/main-style.scss
@@ -55,6 +55,9 @@ header {
 @import "ContentTypes/user-profile";
 @import "ContentTypes/user-profile";
 
+/** Admissions Homepage **/
+@import "admissionsHomepage/homepage-slider.scss";
+
 /** President's page styles **/
 @import "msu-partials/president-site";
 
