--- a/development/terminalfour/src/html/includes/admissionsHomepageIncludes/admissionsHomepageSlider.html
+++ b/development/terminalfour/src/html/includes/admissionsHomepageIncludes/admissionsHomepageSlider.html
@@ -1,7 +1,69 @@
-<div class="container">
-	<div class="row">
-		<div class="col-md-12">
-			<h2>hello world! MSU!</h2>
+
+<section class="admissionsHomepageSlider" id="">
+
+	<div id="admissions-carousel" class="carousel slide" data-ride="carousel">
+		<!-- Indicators -->
+
+		<div class="carousel-controls">
+			<a class="left-arrow" href="#admissions-carousel" role="button" data-slide="prev">
+				<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+			</a>
+			<ol class="carousel-indicators">
+				<li data-target="#admissions-carousel" data-slide-to="0" class="active"></li>
+				<li data-target="#admissions-carousel" data-slide-to="1"></li>
+				<li data-target="#admissions-carousel" data-slide-to="2"></li>
+			</ol>
+			<a class="right-arrrow" href="#admissions-carousel" role="button" data-slide="next">
+				<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+			</a>
 		</div>
+		
+
+		<!-- Wrapper for slides -->
+		<div class="carousel-inner" role="listbox">
+			<div class="item active">
+			  <img src="style-assets/media/admissionsHomepage/header-featured-story.png" alt="...">
+				  <div class="carousel-caption">
+				    <h3>Slide 1</h3>
+				    <p>
+				    	Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				    	tempor incididunt ut labore et dolore magna aliqua.
+					</p>
+				  </div>
+			</div> <!-- first slide END -->
+			<div class="item">
+			  <img src="style-assets/media/admissionsHomepage/header-featured-story.png" alt="...">
+				  <div class="carousel-caption">
+					<h3>Slide 2</h3>
+					<p>
+						consectetur adipisicing elit lorem ipsum, sed do eiusmod
+						tempor incididunt ut labore et dolore magna aliqua.
+					</p>
+				  </div>
+			</div><!-- second slide END -->
+			<div class="item">
+			  <img src="style-assets/media/admissionsHomepage/header-featured-story.png" alt="...">
+				  <div class="carousel-caption">
+					<h3>Slide 3</h3>
+					<p>
+						consectetur adipisicing elit lorem ipsum, sed do eiusmod
+						tempor incididunt ut labore et dolore magna aliqua.
+					</p>
+				  </div>
+			</div><!-- third slide END -->
+		</div>
+
+		<!-- Controls -->
+		<!-- <a class="left carousel-control" href="#admissions-carousel" role="button" data-slide="prev">
+		<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+		<span class="sr-only">Previous</span>
+		</a>
+		<a class="right carousel-control" href="#admissions-carousel" role="button" data-slide="next">
+		<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+		<span class="sr-only">Next</span>
+		</a> -->
 	</div>
-</div>
+		
+</section>
+
+
