--- a/development/terminalfour/src/html/includes/admissionsHomepageIncludes/admissionsHomepageSlider.html
+++ b/development/terminalfour/src/html/includes/admissionsHomepageIncludes/admissionsHomepageSlider.html
@@ -2,11 +2,10 @@
 <section class="admissionsHomepageSlider" id="">
 
 	<div id="admissions-carousel" class="carousel slide" data-ride="carousel">
-		<!-- Indicators -->
-
+		
 		<div class="carousel-controls">
 			<a class="left-arrow" href="#admissions-carousel" role="button" data-slide="prev">
-				<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+				<span class="fa fa-2x fa-caret-left" aria-hidden="true"></span>
 			</a>
 			<ol class="carousel-indicators">
 				<li data-target="#admissions-carousel" data-slide-to="0" class="active"></li>
@@ -14,56 +13,47 @@
 				<li data-target="#admissions-carousel" data-slide-to="2"></li>
 			</ol>
 			<a class="right-arrrow" href="#admissions-carousel" role="button" data-slide="next">
-				<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+				<span class="fa fa-2x fa-caret-right" aria-hidden="true"></span>
 			</a>
-		</div>
+		</div> <!-- carousel-controls END -->
 		
-
 		<!-- Wrapper for slides -->
 		<div class="carousel-inner" role="listbox">
 			<div class="item active">
 			  <img src="style-assets/media/admissionsHomepage/header-featured-story.png" alt="...">
 				  <div class="carousel-caption">
-				    <h3>Slide 1</h3>
-				    <p>
-				    	Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-				    	tempor incididunt ut labore et dolore magna aliqua.
-					</p>
+				    <!-- captions go here - which we will NOT be using  -->
 				  </div>
 			</div> <!-- first slide END -->
 			<div class="item">
 			  <img src="style-assets/media/admissionsHomepage/header-featured-story.png" alt="...">
 				  <div class="carousel-caption">
-					<h3>Slide 2</h3>
-					<p>
-						consectetur adipisicing elit lorem ipsum, sed do eiusmod
-						tempor incididunt ut labore et dolore magna aliqua.
-					</p>
+					<!-- captions go here - which we will NOT be using  -->
 				  </div>
 			</div><!-- second slide END -->
 			<div class="item">
 			  <img src="style-assets/media/admissionsHomepage/header-featured-story.png" alt="...">
 				  <div class="carousel-caption">
-					<h3>Slide 3</h3>
-					<p>
-						consectetur adipisicing elit lorem ipsum, sed do eiusmod
-						tempor incididunt ut labore et dolore magna aliqua.
-					</p>
+					<!-- captions go here - which we will NOT be using  -->
 				  </div>
 			</div><!-- third slide END -->
 		</div>
+	</div> <!-- admissions carousel END -->
 
-		<!-- Controls -->
-		<!-- <a class="left carousel-control" href="#admissions-carousel" role="button" data-slide="prev">
-		<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-		<span class="sr-only">Previous</span>
-		</a>
-		<a class="right carousel-control" href="#admissions-carousel" role="button" data-slide="next">
-		<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-		<span class="sr-only">Next</span>
-		</a> -->
-	</div>
-		
+	<div class="container carousel-cta">
+		<div class="row">
+			<div class="col-sm-12 col-md-7 col-lg-7">
+				<h1>hello world 1</h1>
+				<h3>subtitle text</h3>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+				</p>
+			</div>
+			<div class="col-sm-12 col-md-5 col-lg-5">
+				<button class="btn btn-lg btn-default hero-cta" aria-label="Event announcement">Contact Admissions</button>
+			</div>
+		</div>
+	</div>	
 </section>
 
 
