--- a/development/terminalfour/src/sass/admissionsHomepage/responsive-overrides.scss
+++ b/development/terminalfour/src/sass/admissionsHomepage/responsive-overrides.scss
@@ -4,6 +4,11 @@
 			width: 35%;
 			right: 0%;
 		}
+
+		.container.carousel-cta {
+			padding-left: 15px;
+			padding-right: 15px;
+		}
 	}
 }
 
@@ -14,5 +19,6 @@
 			right: 0%;
 			bottom: 0px;
 		}
+
 	}
 }
