--- a/development/terminalfour/src/html/includes/admissionsHomepageIncludes/admissionsHomepageSlider.html
+++ b/development/terminalfour/src/html/includes/admissionsHomepageIncludes/admissionsHomepageSlider.html
@@ -42,14 +42,13 @@
 
 	<div class="container carousel-cta">
 		<div class="row">
-			<div class="col-sm-12 col-md-7 col-lg-7">
-				<h1>hello world 1</h1>
-				<h3>subtitle text</h3>
+			<div class="col-xs-12 col-sm-8 col-md-7 col-lg-7 details">
+				<h1>Admissions at MSU Denver</h1>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 				</p>
 			</div>
-			<div class="col-sm-12 col-md-5 col-lg-5">
+			<div class="col-xs-12 col-sm-4 col-md-5 col-lg-5 text-center">
 				<button class="btn btn-lg btn-default hero-cta" aria-label="Event announcement">Contact Admissions</button>
 			</div>
 		</div>
