--- a/development/terminalfour/src/sass/admissionsHomepage/homepage-slider.scss
+++ b/development/terminalfour/src/sass/admissionsHomepage/homepage-slider.scss
@@ -3,6 +3,16 @@ section.admissionsHomepageSlider {
 	color: #ffffff;
 	h1, h2, h3, p {
 		color: #ffffff;
+		font-family: $font-family-sans-serif;
+	}
+	h1 {
+		font-size: 2.25rem;
+		font-weight: 700;
+		text-transform: uppercase;
+	}
+	p {
+		font-size: 1rem;
+		font-weight: 500;
 	}
 	 .carousel-inner {
 	 	.item {
@@ -56,5 +66,9 @@ section.admissionsHomepageSlider {
 	 	padding-left: 8.3333333333%;
 	 	padding-right: 8.3333333333%;
 	 	border-top: 15px solid $msu-red;
+	 	.details {
+	 		padding-top: 10px;
+	 		padding-bottom: 20px;
+	 	}
 	 }
 }
